[gd_scene load_steps=9 format=3 uid="uid://ca7li0etwjdw0"]

[ext_resource type="PackedScene" uid="uid://dy3rbt3i2iv2e" path="res://Scenes/Player/Player.tscn" id="1_rl3dm"]
[ext_resource type="Script" path="res://Scenes/game_play.gd" id="1_ymad7"]
[ext_resource type="AudioStream" uid="uid://ew6juit8ml2c" path="res://Assets/Sound/BGM/BigCarTheft.mp3" id="3_5o3fs"]
[ext_resource type="AudioStream" uid="uid://d3n80kk2ls6i7" path="res://Assets/Sound/BGM/Don'tStop.mp3" id="5_mk8rm"]
[ext_resource type="AudioStream" uid="uid://bsxqi5i8g60ck" path="res://Assets/Sound/BGM/ThoughtBot.mp3" id="6_34u7a"]
[ext_resource type="PackedScene" uid="uid://c215ytjk6ucnr" path="res://Scenes/level0.tscn" id="6_jxg7l"]
[ext_resource type="PackedScene" uid="uid://46bnmi8lm3xn" path="res://Scenes/progress_bar.tscn" id="7_poj0y"]
[ext_resource type="PackedScene" uid="uid://dxtqedism2nlo" path="res://Scenes/Enemies/Boss.tscn" id="8_ccqta"]

[node name="GamePlay" type="Node"]
script = ExtResource("1_ymad7")

[node name="Player" parent="." instance=ExtResource("1_rl3dm")]
unique_name_in_owner = true
position = Vector2(500, 721)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../PlayerCam")

[node name="PlayerCam" type="Camera2D" parent="."]
position = Vector2(500, 721)
offset = Vector2(200, -320)
limit_top = 320
limit_bottom = 1200
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 1.0
drag_right_margin = 0.7
drag_bottom_margin = 1.0
editor_draw_drag_margin = true

[node name="bgm1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5o3fs")
volume_db = -22.0

[node name="bgm2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mk8rm")
volume_db = -22.0

[node name="bgm3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_34u7a")
volume_db = -10.0

[node name="Level0" parent="." instance=ExtResource("6_jxg7l")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" parent="CanvasLayer" instance=ExtResource("7_poj0y")]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 38.0
offset_bottom = 38.0
grow_horizontal = 2

[node name="LevelSwitchTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="Boss" parent="." instance=ExtResource("8_ccqta")]
unique_name_in_owner = true
position = Vector2(-4, 417)

[connection signal="finished" from="bgm1" to="." method="_on_bgm_1_finished"]
[connection signal="finished" from="bgm2" to="." method="_on_bgm_2_finished"]
[connection signal="finished" from="bgm3" to="." method="_on_bgm_3_finished"]
[connection signal="timeout" from="LevelSwitchTimer" to="." method="_on_level_switch_timer_timeout"]
[connection signal="player_hit" from="Boss" to="Player" method="_on_boss_player_hit"]
